# hexlet-gendiff

./: .coverage  .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: gendiff-ci.yml
gendiff/: __init__.py  argparse_args.py  diff_dict.py  gendiff.py
gendiff/diff_formatter/: __init__.py  diff_formatter.py  fabric.py  json_formatter.py  plain_formatter.py  stylish_formatter.py
gendiff/file_parser/: __init__.py  fabric.py  file_parser.py  json_parser.py  yaml_parser.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
tests/fixtures/: result_json
